--- a/fonts/style.css
+++ b/fonts/style.css
@@ -18,7 +18,7 @@
   background: #b71c2c;
   color: #fff;
   padding: 32px 0 16px 0;
-  font-family: "PFDinTextPro-Regular", Arial, sans-serif;
+  font-family: "Segoe UI", sans-serif;
   margin-top: 40px;
 }
 .caa-footer-content {
